--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@ h2.info {
 
  /* Mobile CSS */
 
-@media screen and (max-width: 450px) {
+@media screen and (orientation: portrait) {
     #sidebar {
         opacity: 0;
         transition: opacity 0.2s;
