--- a/style.css
+++ b/style.css
@@ -185,6 +185,7 @@ nav a:hover {
 /* Sandwich animations*/
 
 .menu-animation .b1 {
+    -webkit-transform: rotate(45deg) translate(1px, 11px);
     transform: rotate(45deg) translate(1px, 11px);
 }
 
@@ -193,6 +194,7 @@ nav a:hover {
 }
 
 .menu-animation .b3 {
+    -webkit-transform: rotate(-45deg) translate(0px, -10px);
     transform: rotate(-45deg) translate(0px, -10px);
 }
 
