--- a/style.css
+++ b/style.css
@@ -13,10 +13,11 @@ html {
 
 body {
     min-height: 100%;
-    background-image: linear-gradient(to top, #09203f 0%, #537895 100%);
+    /* background-image: linear-gradient(to top, #09203f 0%, #537895 100%); */
 }
 
 main {
+    background-image: linear-gradient(15deg, #13547a 0%, #80d0c7 100%);
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -40,6 +41,7 @@ main {
     position: absolute;
     align-items: center;
     justify-content: center;
+    /* background-image: linear-gradient(to top, #d5d4d0 0%, #d5d4d0 1%, #eeeeec 31%, #efeeec 75%, #e9e9e7 100%); */
     background-color: white;
     height: 100%;
     max-width: 250px;
@@ -64,6 +66,7 @@ main {
     overflow: hidden;
     object-fit: cover;
     object-position: 0px -20px;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
 }
 
 .info {
