Renaming JS functions and minor CSS changes

--- a/style.css
+++ b/style.css
@@ -70,6 +70,8 @@ main {
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
+    overflow: auto;
+    max-width: inherit;
 }
 
 #pfp {
