--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@ html {
 
 body {
     min-height: 100%;
-    /* background-image: linear-gradient(to top, #09203f 0%, #537895 100%); */
 }
 
 main {
@@ -23,18 +22,13 @@ main {
     justify-content: center;
     align-items: center;
     position: absolute;
-    left: 250px;
-    right: 0px;
-    top: 0px;
-    bottom: 0px;  
-    /* background-color: white;
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2); */
-    overflow-y: auto;
-    overflow-x: hidden;
+    left: 250px; right: 0px;
+    top: 0px; bottom: 0px;
+    overflow: auto;
 }
 
 /* Sidebar */
-.menu {
+#menu {
     display: none;
     opacity: 0;
     transition: opacity 0.2s;
@@ -51,34 +45,25 @@ main {
 #sidebar {
     display: flex;
     flex-direction: column;
-    position: absolute;
+    flex-wrap: nowrap;
     align-items: center;
     justify-content: center;
-    /* background-image: linear-gradient(to top, #d5d4d0 0%, #d5d4d0 1%, #eeeeec 31%, #efeeec 75%, #e9e9e7 100%); */
-    background-color: white;
-    height: 100%;
-    max-width: 250px;
-    min-width: 200px;
+    position: absolute;
+    top: 0;
+    left: 0;
     z-index: 1;
     opacity: 1;
+    background-color: white;
+    height: 100%;
+    width: 250px;
+    overflow-y: auto;
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
-}
-
-#sidewrapper {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    overflow: auto;
-    max-width: inherit;
 }
 
 #pfp {
     height: 150px;
     width: 150px;
     margin: 15px;
-    overflow: hidden;
     object-fit: cover;
     object-position: 0px -20px;
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
@@ -192,6 +177,19 @@ nav a:hover {
     width: auto;
 }
 
+/* Theme selector */
+.theme-selector {
+    position: absolute;
+    z-index: 2;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+}
+
+.theme-selector img {
+    width: 30px;
+}
+
  /* Mobile CSS */
 @media only screen and (orientation: portrait) {
     #sidebar {
@@ -201,7 +199,7 @@ nav a:hover {
         box-shadow: none;
     }
 
-    .menu {
+    #menu {
         display: inline-block;
         position: absolute;
         top: 10px;
@@ -239,10 +237,24 @@ nav a:hover {
     transition: opacity 0.2s;
 }
 
+.color-transition {
+    transition: color 0.4s;
+    transition: background-color 0.2s;
+}
+
 .visible {
     opacity: 1 !important;
 }
 
 .no-render {
     display: none !important;
+}
+
+.dark-mode {
+    background-color: rgb(20, 20, 20) !important;
+    color: white !important;
+}
+
+.dark-2 {
+    background-color: white !important;
 }
