--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ main div {
 }
 
 main p {
-  max-width: 70%;
+  max-width: 450px;
 }
 
 #profile {
@@ -45,6 +45,7 @@ main p {
 /* Navbar */
 
 .navbar {
+  display: flex;
   position: fixed;
   transition: 250ms ease;
   width: 5rem;
@@ -60,13 +61,6 @@ main p {
 
 .navbar::-webkit-scrollbar-thumb {
   background: var(--text-primary);
-}
-
-.navbar:hover {
-  background-color: var(--bg-secondary);
-  width: 12rem;
-  overflow: scroll;
-  box-shadow: 1px 0 10px 0 rgba(0, 0, 0, 0.4);
 }
 
 .navbar-nav {
@@ -97,20 +91,61 @@ main p {
   transition: ease 100ms;
 }
 
-.nav-link:hover i {
-  transform: scale(1.2);
+@media only screen and (min-width: 768px) {
+  .navbar:hover {
+    background-color: var(--bg-secondary);
+    width: 12rem;
+    overflow: scroll;
+    box-shadow: 1px 0 10px 0 rgba(0, 0, 0, 0.4);
+  }
+  
+  .nav-link:hover i {
+    transform: scale(1.2);
+  }
+  
+  .nav-link:hover .link-text {
+    transform: translateX(-10px);
+  }
+  
+  .link-text {
+    display: none;
+    margin-left: 1rem;
+    transition: ease 100ms;
+  }
+  
+  .navbar:hover .link-text {
+    display: inline;
+  }
 }
 
-.nav-link:hover .link-text {
-  transform: translateX(-10px);
-}
 
-.link-text {
-  display: none;
-  margin-left: 1rem;
-  transition: ease 100ms;
+@media only screen and (max-width: 768px) {
+  main {
+    padding: 15px;
+    margin-left: 0;
+    height: 85vh;
+    overflow: auto;
 }
+  
+  .navbar {
+    bottom: 0;
+  }
+  
+  .navbar, .navbar-nav {
+    flex-direction: row;
+    height: fit-content;
+    width: 100vw;
+  }
 
-.navbar:hover .link-text {
-  display: inline;
+  .navbar-nav {
+    justify-content: space-around;
+  }
+
+  .nav-item {
+    width: fit-content;
+  }
+  
+  .link-text {
+    display: none;
+  }
 }
